﻿1.0.0 
- Initial release
1.0.1 / 2.0.1
- Fixed livestreams
1.0.2 / 2.0.2
- Fixed livestreams
1.0.3 / 2.0.3
- Fixed site changes
- Added better thumbs
1.0.4 / 2.0.4
- Added context menu "Add to queue"
2.0.5
- Fixed video listing
- Fixed polish site version
...

[B]Version 2.1.0  (16.09.2018)[/B] by realvito[CR]
- fixed: euronews - LIVE TV
- added: Video - Laufzeit und Plot 
- optimized: Script komplett überarbeitet und unnötige Inhalte entfernt

[B]Version 2.1.1  (30.09.2018)[/B] by realvito[CR]
- fixed: mehrfache Video-Links desselben Artikels
- added: Videos - bevorzugt über Youtube abspielen (höhere Qualität), sofern Link vorhanden (settings)

[B]Version 2.1.2  (16.02.2019)[/B] by realvito[CR]
- fixed: Es werden KEINE Unterordner der Startordner angezeigt
- optimized: Doppelte Ordner werden jetzt herausgefiltert
- added: Wenn KEINE Videos im Ordner vorhanden sind - Meldung eingebaut

[B]Version 2.1.3  (14.07.2019)[/B] by realvito[CR]
- fixed: Es werden KEINE Ordner in der Übersicht angezeigt (Webseite und Quelltext verändert)
- optimized: Bei Auswahl = Bev. mit Youtube abspielen - wird jetzt überprüft ob der YT-Link existiert, wenn nicht vorh. wird der Standardlink abgespielt

[B]Version 2.1.4  (19.07.2019)[/B] by realvito[CR]
- fixed: Wieder werden KEINE Ordner in der Übersicht angezeigt und ein Fehler wird produziert (Quelltext nochm. verändert)