@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.4" provider-name="L0RE">
+<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.5" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="plugin.video.youtube" version="6.1.0"/>
-		<import addon="script.module.beautifulsoup4" version="4.3.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
@@ -26,8 +25,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.1.4  (19.07.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Wieder werden KEINE Ordner in der Übersicht angezeigt und ein Fehler wird produziert (Quelltext nochm. verändert)
+		<news>[B][COLOR orangered]Version 2.1.5  (20.10.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Wenn Live-Stream fehlerhaft - wird Addon nicht geöffnet
+- fixed: Wenn original Live-Stream ausfällt - nehme Ersatz Live-Stream von Youtube (wenn vorh.)
 		</news>
 	</extension>
 </addon>
